<resources>
    <string name="app_name">NESTLÉ Fact Files</string>

    <string name="dropbox_app_key">skm94m6vye66wah</string>
    <string name="dropbox_access_token">pglCU79a_jAAAAAAAAAACJDHi0hynWvJnOAXuHqqlMpTz3zfzXkarLJvcU5PTt_-</string>

    <string name="welcome_text">This application aims to connect with consumers around their queries and concerns about our brands, with easy to use video responses.</string>

    <string name="access_app">ACCESS APP</string>

    <string name="passcode_required">PASSCODE REQUIRED</string>
    <string name="passcode_explanation">To access the app you need to provide one time pass code</string>
    <string name="enter_passcode_here">Enter Passcode Here</string>
    <string name="_continue">Continue</string>

    <string name="invalid_code">Invalid Code</string>

    <string name="description_above_brands">For any queries related to a specific brand click on the logos below</string>

    <string name="swipe_to_reload">SWIPE TO RELOAD</string>

    <string name="brand_name">Brand Name</string>
    <string name="videos_downloaded">VIDEOS DOWNLOADED</string>
    <string name="video_title">Video Title</string>
    <string name="video_description">Video Description</string>

    <string name="incomplete">Incomplete</string>
    <string name="outdated">Outdated</string>
    <string name="not_playable">Not Playable</string>
    <string name="deleted">Deleted</string>

    <string name="download">Download</string>
    <string name="download_again">Download Again</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="ok">OK</string>

    <string name="download_video_first">Please download video first</string>
    <string name="wait_for_download_completion">Please wait for download to complete</string>
    <string name="download_video_again">Please download video again</string>
    <string name="unable_to_play_video">Unable to play video %s</string>
    <string name="unable_to_play_video_explanation">Some unexpected error occurred while playing this video. Please connect to reliable internet connection and download video again.</string>

    <string name="questions_asked_by_customers">Any consumer question not answered through this video can be submitted below</string>
    <string name="submit">SUBMIT</string>

    <string name="text__available_for_download_plural">There are %s videos available for download. You can choose to download all videos now in background or you can download later manually.</string>
    <string name="text__available_for_download_singular">There is one new video available for download. You can choose to download it now in background or you can download later manually.</string>
    <string name="download_now">Download Now</string>
    <string name="download_later">Download Later</string>
    <string name="successfully_downloaded_videos">Successfully downloaded %1$d out of %2$d videos</string>

    <string name="try_again">Try Again</string>
    <string name="connect_to_internet">Connect to internet and try again</string>
    <string name="unable_to_get_brands">Unable to get Brands. Please try again.</string>
    <string name="unable_to_get_videos">Unable to get Videos. Please try again.</string>
    <string name="cannot_download_video_permission_denied">Can\'t download video: write access denied.</string>
    <string name="cannot_download_questions_permission_denied">Can\'t download questions: write access denied.</string>
    <string name="grant_storage_permission">Please grant storage permission to complete action.</string>
    <string name="type_question_first">Type the question first</string>

    <string name="press_back_again_to_exit">Press BACK again to exit</string>
    <string name="press_back_again_to_close">Press BACK again to close</string>

</resources>
