<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewVideoPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitStart"
                    android:adjustViewBounds="true"
                    android:src="@drawable/video_preview" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewVideoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_tiny"
                    android:layout_marginRight="@dimen/margin_tiny"
                    android:layout_marginBottom="@dimen/margin_tiny"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/video_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    android:lines="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:id="@+id/textViewVideoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_tiny"
                    android:layout_marginRight="@dimen/margin_tiny"
                    android:text="@string/video_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny" >

                    <TextView
                        android:id="@+id/textViewVideoStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/margin_tiny"
                        android:text="@string/download"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/textViewVideoDownload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_small"
                        android:padding="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium_lower"
                        android:background="@drawable/button_with_gradient" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutProgressBarContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_tiny"
                    android:orientation="horizontal" >

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:id="@+id/progressBarVideoProgress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/colorLogo"
                        android:max="100" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>